Fix chessboard alignment

--- a/chessweb-cs/wwwroot/css/chess.css
+++ b/chessweb-cs/wwwroot/css/chess.css
@@ -64,7 +64,6 @@
 
 .chess-container {
     display: flex;
-    justify-content: center;
     align-items: flex-start;
     gap: 10px;
     width: 100%;
